# python-template

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/actions/deploy/: action.yaml
.github/actions/python/: action.yml  semgrep.js  semgrep.py
.github/actions/python-poetry/: action.yml
.github/actions/python-uv/: action.yml
.github/actions/test/: action.yaml
.github/workflows/: python-poetry.yml  python-uv.yml  python.yml
src/python_template/: main.py
src/python_template/templates/: hello.html
tests/: main_test.py  test_main.py
