[project]
name = "python-template"
version = "0.1.0"
description = "A simple python template with uv"
readme = "README.md"
authors = []

requires-python = ">=3.13"
dependencies = [
    "Flask>=3.1.0",
    "gunicorn>=23.0.0",
    "waitress>=3.0.2"
]

[project.scripts]
python-template = "python_template.main:main"
python_template = "python_template.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = ["mypy", "pytest", "ruff", "hatchling", "types-waitress"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python_template"]

[tool.mypy]
python_version = "3.9"
files = ["src/python_template", "tests/"]
show_error_codes = true
pretty = true
strict = true


[tool.hatch.build.targets.sdist]
include = [
    "/src/python_template/templates/hello.html",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "mypy", 
    "pytest", 
    "hatchling",
    "types-waitress"
]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "scripts/**/*.py"]
src = ["src", "tests"]